--- a/CookLook/Pages/Index.razor
+++ b/CookLook/Pages/Index.razor
@@ -1,7 +1,49 @@
-﻿@page "/"
+﻿@using CookLook.Models;
+@using CookLook.Services;
+@page "/"
+@inject IRecipeSearchService recipeSearchService;
 
-<h1>Hello, world!</h1>
+<h1>Search for a recipe</h1>
 
-Welcome to your new app.
+@if (recipes == null)
+{
+    <p><em>Waiting for your delicious input...</em></p>
+}
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>URL</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var recipie in recipes)
+            {
+                <tr>
+                    <td>@recipie.Label</td>
+                    <td>@recipie.Url</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+<input type="text" @bind-value="@searchTerm" />
+<input type="button" value="Search" @onclick="@SearchRecipes" />
+
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+
+@code {
+
+
+    private string searchTerm;
+    private List<Recipe> recipes;
+
+    async Task SearchRecipes()
+    {
+        recipes = await recipeSearchService.SearchRecipesAsync(searchTerm);
+    }
+}
