Spelling error destroyed

--- a/CookLook/Pages/Index.razor
+++ b/CookLook/Pages/Index.razor
@@ -19,11 +19,11 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var recipie in recipes)
+            @foreach (var recipe in recipes)
             {
                 <tr>
-                    <td>@recipie.Label</td>
-                    <td>@recipie.Url</td>
+                    <td>@recipe.Label</td>
+                    <td>@recipe.Url</td>
                 </tr>
             }
         </tbody>
